--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
-# Feel free to add content and custom Front Matter to this file.
-# To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-
 layout: home
+paginate: true
 ---
 Hi, welcome to the official site of Leeds Raspberry Jam. This site is used for hosting the [OTIS project](https://otis.leedsraspjam.co.uk/). If you would like to learn more about
 us you can have a look at our twitter at [@LeedsRaspJam](https://twitter.com/LeedsRaspJam) or visit the eventbrite page [here](https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804). Check back here for updates on projects and lots more!
