Update links to html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: home
 paginate: true
 ---
-Hi, welcome to the official site of Leeds Raspberry Jam. This site is used for hosting the [OTIS project](https://otis.leedsraspjam.co.uk/). If you would like to learn more about
-us you can have a look at our twitter at [@LeedsRaspJam](https://twitter.com/LeedsRaspJam) or visit the eventbrite page [here](https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804). Check back here for updates on projects and lots more!
+Hi, welcome to the official site of Leeds Raspberry Jam. This site is used for hosting the <a href="https://otis.leedsraspjam.co.uk/">Otis Project</a>. If you would like to learn more about
+us you can have a look at our twitter at <a href="https://twitter.com/LeedsRaspJam">@LeedsRaspJam</a> or visit the eventbrite page <a href="https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804">here</a>. Check back here for updates on projects and lots more!
