Add homepage layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: homepage
 paginate: true
 ---
 Hi, welcome to the official site of Leeds Raspberry Jam. This site is used for hosting the <a href="https://otis.leedsraspjam.co.uk/">Otis Project</a>. If you would like to learn more about
