--- a/index.html
+++ b/index.html
@@ -1,6 +1,73 @@
 ---
-layout: home
-paginate: true
+layout: default
 ---
-Hi, welcome to the official site of Leeds Raspberry Jam. This site is used for hosting the <a href="https://otis.leedsraspjam.co.uk/">Otis Project</a>. If you would like to learn more about
-us you can have a look at our twitter at <a href="https://twitter.com/LeedsRaspJam">@LeedsRaspJam</a> or visit the eventbrite page <a href="https://www.eventbrite.co.uk/o/the-foundation-for-digital-creativity-19981872804">here</a>. Check back here for updates on projects and lots more!
+
+<div class="home">
+
+
+    <div id="header-text">
+      <p><p>
+      Brief description of the jam etc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pellentesque dui id massa aliquam, et efficitur odio fermentum. Proin mauris nisi, aliquet at convallis vel, vehicula vitae eros. Mauris iaculis varius dolor, ac sollicitudin massa. Proin faucibus libero id nisl sagittis, quis venenatis metus malesuada. Fusce at eleifend tortor. Mauris varius, leo vitae fringilla aliquam, neque nisi dictum dolor, ac vehicula diam diam sodales ipsum.
+    </div>
+
+    <div class="row pack">
+
+        {% for post in paginator.posts %}
+            <div class="col-md-4 card">
+             <a href="{{ post.url | prepend: site.baseurl }}" class="index-anchor">
+                <div class="panel panel-default">
+
+                  {% if post.img %}
+                  <img width="100%" src="{{site.baseurl}}/images/{{post.img}}" alt="{{post.title}}">
+                  {% else %}
+                  <img width="100%" src="{{site.baseurl}}/images/webjeda-logo-big.jpg" alt="{{site.title}}">
+                  {% endif %}
+
+                  <div class="panel-body">
+                    <h3 class="panel-title pull-left">{{ post.title | truncate: 25 }}</h3>
+                  </div>
+
+                  <div class="panel-body"><small>
+                    {{ post.excerpt | strip_html | strip_newlines | truncate: 180 }}</small>
+                  </div>
+                </div>
+                </a>
+            </div>
+
+          {% endfor %}
+
+    </div>
+
+<div class="row">
+    <div class="col-md-4">  </div>
+    <div class="col-md-4">
+        {% if paginator.total_pages > 1 %}
+        <ul class="pagination">
+          {% if paginator.previous_page %}
+            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a></li>
+          {% else %}
+            <li><span>&laquo; Prev</span></li>
+          {% endif %}
+
+          {% for page in (1..paginator.total_pages) %}
+            {% if page == paginator.page %}
+              <li class="active"><span><em>{{ page }}</em></span></li>
+            {% elsif page == 1 %}
+            <li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a></li>
+            {% else %}
+            <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
+            {% endif %}
+          {% endfor %}
+
+          {% if paginator.next_page %}
+            <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a></li>
+          {% else %}
+            <li><span >Next &raquo;</span></li>
+          {% endif %}
+          </ul>
+        {% endif %}
+
+    </div>
+    <div class="col-md-4">  </div>
+</div>
+</div>
