--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@ layout: default
 
     <div id="header-text">
       <p><p>
-      Brief description of the jam etc. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pellentesque dui id massa aliquam, et efficitur odio fermentum. Proin mauris nisi, aliquet at convallis vel, vehicula vitae eros. Mauris iaculis varius dolor, ac sollicitudin massa. Proin faucibus libero id nisl sagittis, quis venenatis metus malesuada. Fusce at eleifend tortor. Mauris varius, leo vitae fringilla aliquam, neque nisi dictum dolor, ac vehicula diam diam sodales ipsum.
+      Brief description of the jam etc. **CLONED ACROSS FROM OLD WEB - CHANGE ME**
+      Raspberry Jams are independently organised community events for people to come together to learn about digital making with Raspberry Pi.
+      Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href"https://www.google.co.uk/maps/place/Dixons+Unity+Academy/@53.7943913,-1.6048,17z/data=!3m1!4b1!4m5!3m4!1s0x48795fb54e43b46d:0x42c3832724c448e0!8m2!3d53.7943882!4d-1.6026113">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
     </div>
 
     <div class="row pack">
