--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 layout: default
 ---
 
+<div id="header-text">
+  <p><p>
+  Brief description of the jam etc. **CLONED ACROSS FROM OLD WEB - CHANGE ME**
+  Raspberry Jams are independently organised community events for people to come together to learn about digital making with Raspberry Pi.
+  Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href"https://www.google.co.uk/maps/place/Dixons+Unity+Academy/">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
+</div>
+
 <div class="home">
-
-
-    <div id="header-text">
-      <p><p>
-      Brief description of the jam etc. **CLONED ACROSS FROM OLD WEB - CHANGE ME**
-      Raspberry Jams are independently organised community events for people to come together to learn about digital making with Raspberry Pi.
-      Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href"https://www.google.co.uk/maps/place/Dixons+Unity+Academy/@53.7943913,-1.6048,17z/data=!3m1!4b1!4m5!3m4!1s0x48795fb54e43b46d:0x42c3832724c448e0!8m2!3d53.7943882!4d-1.6026113">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
-    </div>
 
     <div class="row pack">
 
