--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <p><p>
   Brief description of the jam etc. **CLONED ACROSS FROM OLD WEB - CHANGE ME**
   Raspberry Jams are independently organised community events for people to come together to learn about digital making with Raspberry Pi.
-  Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href="https://www.google.co.uk/maps/place/Dixons+Unity+Academy/">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
+  Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href="https://goo.gl/maps/j5Fp9FKvA6mh8SJd9">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
 </div>
 
 <div class="home">
