--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div id="header-text">
   <p><p>
   Raspberry Jams are independently organised community events for people to come together to learn about digital making with Raspberry Pi.
-  Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href="https://goo.gl/maps/j5Fp9FKvA6mh8SJd9">see on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
+  Leeds Raspberry Jam is usually hosted on the first Wednesday of the month at Dixons Unity Academy (<a href="https://goo.gl/maps/j5Fp9FKvA6mh8SJd9">view on google maps</a>), everyone is welcome regardless of skill level or experience. Tickets are available at our Eventbrite page below.
 </div>
 
 <div class="home">
